# tempalgin-bot-template

./: .env.dist  .gitignore  pyproject.toml
migrations/versions/: 55b3f6f59e23_initial.py  f1c5053a785f_from_template_to_first_unit.py
src/: configuration.py
src/bot/: __main__.py  dispatcher.py
src/bot/locales/en/: lexicon.ftl
src/bot/locales/ru/: lexicon.ftl
src/bot/logic/: __init__.py
src/bot/logic/dialogs/: start.py
src/bot/logic/dialogs/assistance/: action.py  dialog.py  getter.py
src/bot/logic/dialogs/start/: dialog.py  getter.py
src/bot/logic/handlers/: commands.py
src/bot/logic/tasks/: gpt.py
src/bot/middlewares/: __init__.py  chat_type_md.py  database_md.py  i18n_md.py  register_md.py  role.py
src/bot/structures/: data_structure.py  enums.py
src/bot/structures/FSM/: dialog_fsm.py
src/db/: database.py
src/db/models/: chat.py  thread.py  user.py
src/db/repositories/: chat.py  thread.py  user.py
src/gpt/: client.py
systemd/: kxm-helper-bot.service  kxm-helper-scheduler.service  kxm-helper-worker.service  template-worker.service  template.service
tests/utils/: updates.py
